--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ header {
 }
 h1 {
   font-size: 2rem;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 legend {
-  font-size: 20px;
-  color: #31363f;
+  display: none;
 }
 
 body {
@@ -44,7 +45,8 @@ form {
 }
 
 input[type="text"],
-input[type="email"] {
+input[type="email"],
+input[type="tel"] {
   width: 90%;
   padding: 10px;
   margin-bottom: 20px;
